# ib-trader

./: .claudeignore  .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml
.context/: state-management-design.md  state-management-detailed-plan.md  state-management-final-plan.md  state-management-high-level-approach.md
config/: redis.conf  settings.yaml  symbols.yaml  watchlist.yaml
config/bots/: close-trend-rsi-gld.yaml  close-trend-rsi-meta.yaml  close-trend-rsi-psq.yaml  close-trend-rsi-qqq.yaml  close-trend-rsi-uso.yaml  sawtooth-rsi-meta.yaml  sawtooth-rsi-qqq.yaml  test-ford.yaml
config/strategies/: close_trend_gld.yaml  close_trend_meta.yaml  close_trend_psq.yaml  close_trend_rsi.yaml  close_trend_uso.yaml  sawtooth_qqq.yaml  sawtooth_rsi.yaml  test_ford_close_trend.yaml
deploy/: ib-api.service  ib-bots.service  ib-daemon.service  ib-engine.service  ib-trader-session.json  setup.sh  start.sh  stop.sh  tmux-dev.sh
docs/: DESIGN.md  IMPLEMENTATION.md  index.md
docs/decisions/: 001-order-amendment-not-cancel-replace.md  002-zero-memory-state.md  003-sqlite-wal-mode.md  004-shared-sqlite-no-ipc.md  005-decimal-not-float.md  006-options-future-readiness.md  007-ib-abstraction-layer.md  008-ib-rate-limiting.md  009-repl-not-one-shot-cli.md  010-mutual-watchdog-via-heartbeat.md  011-two-severity-levels-catastrophic-warning.md  012-ib-insync-over-rest-api.md  013-textual-ib-insync-event-loop.md  014-overnight-patch-ib-async.md  015-auto-detect-paper-live-mode.md  016-collapse-fsm-into-bot.md  017-external-pager.md  018-cancel-verification-via-ib-open-orders.md
docs/design/: execution-algos.md
docs/specs/: chart-pane.md
frontend/: README.md  VARIANT_COMPARISON.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts  bots-lifecycle.spec.ts  bots.spec.ts  live-bots-workflow.live.spec.ts  live-ford-workflow.live.spec.ts  live-ui-smoke.live.spec.ts  mock-api.mjs
frontend/src/: main.tsx
frontend/src/api/: client.ts  ws.ts
frontend/src/app/: App.tsx
frontend/src/data/: store.ts
frontend/src/layout/: ComponentFactory.tsx  MobileLayout.tsx  WorkstationLayout.tsx  variants.ts
frontend/src/styles/: app.css
frontend/src/types/: index.ts  speech.d.ts
ib_trader/: __init__.py
ib_trader/api/: app.py  auth.py  deps.py  main.py  serializers.py  ws.py
ib_trader/bots/: bar_aggregator.py  base.py  bootstrap.py  config_loader.py  definition.py  fsm.py  internal_api.py  lifecycle.py  main.py  middleware.py  registry.py  registry_config.py  runner.py  runtime.py  state.py  strategy.py
ib_trader/broker/: base.py  exceptions.py  factory.py  fill_stream.py  market_hours.py  types.py
ib_trader/config/: context.py  loader.py
ib_trader/daemon/: __init__.py  integrity.py  main.py  monitor.py  reconciler.py  tui.py
ib_trader/data/: __init__.py  base.py  models.py  repository.py
ib_trader/engine/: __init__.py  connect.py  exceptions.py  internal_api.py  main.py  market_hours.py  market_hours_futures.py  order.py  order_ledger.py  order_ref.py  pricing.py  reconciler.py  recovery.py  service.py  ticks.py  tracker.py
ib_trader/ib/: __init__.py  base.py  gateway_probe.py  insync_client.py  overnight_patch.py
ib_trader/logging_/: __init__.py  alerts.py  logger.py
ib_trader/redis/: __init__.py  client.py  state.py  streams.py
ib_trader/repl/: __init__.py  commands.py  main.py  output_router.py  pane_config.py  tui.py
ib_trader/utils/: symbol.py
migrations/: alembic.ini  env.py
migrations/versions/: 082a73d8f5c5_remove_orders_table_enrich_transactions.py  28646b547eeb_add_pending_commands_bots_templates.py  2d2c75fd550d_denormalize_bot_events.py  3b9c1a04e7d2_add_ib_realized_pnl.py  48f9a1171568_initial_schema.py  4f8e2a91b5c3_add_instrument_columns_to_transactions.py  a504a55d11e7_add_market_price_to_position_cache.py  a7c3e2f91b04_add_transactions_table.py
ops/: health_check.sh  ibtrader-health.service  ibtrader-health.timer  install-pager.sh  maint
prompts/: UI_prototype_chatgpt.md  add_command_center_tui_v3.md  add_ib_source_of_truth_v1.md  ib_trading_cli_prompt_v7.md
prototypes/ib-control-center-prototypes/: DESIGN_NOTES.md  README.md  VARIANT_COMPARISON.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
scripts/: backfill_bot_trade_groups.py  backfill_bot_trade_serials.py  backfill_bot_trades.py  backfill_commissions.py  backfill_gh48_phantom_cancel_fills.py  backfill_ib_realized_pnl.py  e2e-live.sh  migrate_bots_to_yaml.py
signals_lib/: __init__.py  channels.py  divergence.py  ibs.py  indicators.py  pipeline.py  price_action.py  sawtooth.py  time_filters.py  trend.py  volume.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_bid_ask_order.py  test_close_command.py  test_limit_order.py  test_mid_order.py  test_order_placement.py  test_reconciliation.py  test_smart_market_order.py
tests/smoke/: __init__.py  test_console_ford_workflow.py  test_live_ib.py  test_live_orders.py
tests/unit/: __init__.py  test_account_validation.py  test_api_routes.py  test_api_websocket.py  test_bar_publisher.py  test_bot_framework.py  test_bot_sec_type_gate.py  test_bots_internal_api_health.py  test_broker_base.py  test_cli_futures.py  test_cme_session.py  test_command_queue.py  test_commands.py  test_config.py  test_config_env.py  test_engine_service.py  test_exceptions.py  test_gateway_mode_detection.py  test_heartbeat.py  test_instrument_resolution.py  test_insync_cancel_verify.py  test_insync_dispatch.py  test_integrity.py  test_live_account_warning.py  test_log_and_alert.py  test_market_hours.py  test_ops_pager_scripts.py  test_order_ledger.py  test_order_ref.py  test_output_router.py  test_pane_config.py  test_pending_commands.py  test_pricing.py  test_reconciler.py  test_recovery.py  test_redis_streams.py  test_repository.py  test_serial_numbers.py  test_symbol_format.py  test_ticks.py  (+3 more)
(+103 files in other folders)
