[project]
name = "ib-trader"
version = "1.0.0"
description = "Interactive Brokers trading engine with persistent REPL and daemon"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "ib-async>=2.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "mypy>=1.19.1",
    "pydantic>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
    "tzdata>=2024.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.5",
    "sqlalchemy>=2.0.48",
    "textual>=8.0.2",
    "uvicorn>=0.34.0",
    "websockets>=16.0",
]

[project.scripts]
ib-trader = "ib_trader.repl.main:main"
ib-daemon = "ib_trader.daemon.main:main"
ib-engine = "ib_trader.engine.main:main"
ib-api = "ib_trader.api.main:main"
ib-bots = "ib_trader.bots.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ib_trader*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: marks tests requiring a live IB Gateway connection",
]
addopts = "--ignore=tests/smoke"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["ib_trader"]
omit = [
    "tests/*",
    "migrations/*",
    # Requires live IB connection — tested via smoke tests only
    "ib_trader/ib/insync_client.py",
    # Requires interactive terminal or live IB — tested via integration/smoke
    "ib_trader/repl/main.py",
    # Requires Textual TUI runtime
    "ib_trader/daemon/tui.py",
    "ib_trader/repl/tui.py",
    # Daemon main requires full async TUI + IB
    "ib_trader/daemon/main.py",
    # Engine service main requires live IB connection
    "ib_trader/engine/main.py",
    # API server main requires uvicorn runtime
    "ib_trader/api/main.py",
    # Bot runner main requires full async runtime
    "ib_trader/bots/main.py",
    # Broker implementations require live broker connections
    "ib_trader/broker/ib/client.py",
    "ib_trader/broker/alpaca/client.py",
    # Bot runner requires full async runtime
    "ib_trader/bots/runner.py",
    # Logging setup is I/O-only, tested implicitly
    "ib_trader/logging_/logger.py",
]

[tool.coverage.report]
fail_under = 90
