[project]
name = "ib-trader"
version = "1.0.0"
description = "Interactive Brokers trading engine with persistent REPL and daemon"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "click>=8.3.1",
    "fastapi>=0.115.0",
    "ib-async>=2.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "mypy>=1.19.1",
    "pydantic>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
    "tzdata>=2024.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.5",
    "sqlalchemy>=2.0.48",
    "textual>=8.0.2",
    "uvicorn>=0.34.0",
    "websockets>=16.0",
    "numpy>=2.0",
    "pandas>=2.2",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
]

[project.scripts]
ib-trader = "ib_trader.repl.main:main"
ib-daemon = "ib_trader.daemon.main:main"
ib-engine = "ib_trader.engine.main:main"
ib-api = "ib_trader.api.main:main"
ib-bots = "ib_trader.bots.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["ib_trader*", "signals_lib*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: marks tests requiring a live IB Gateway connection",
]
addopts = "--ignore=tests/smoke"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Functional rules only — correctness, bugs, security, async. No style.
select = [
    "F",      # pyflakes: undefined names, unused imports (kills dead migration code)
    "B",      # flake8-bugbear: mutable defaults, unused loop vars, except-pass, etc.
    "S",      # flake8-bandit: hardcoded secrets, unsafe subprocess, pickle, eval
    "ASYNC",  # flake8-async: blocking calls in async, asyncio correctness
    "RUF",    # ruff-specific correctness rules
    "PLE",    # pylint errors only (no conventions/warnings/refactor)
]
ignore = [
    "S101",     # assert used — fine in tests
    "S311",     # random module — not used for crypto in this project
    "B008",     # function call in default arg — FastAPI's Depends() needs this
    "RUF001",   # ambiguous unicode in strings — em-dashes are intentional
    "RUF002",   # ambiguous unicode in docstrings — em-dashes are intentional
    "RUF003",   # ambiguous unicode in comments — em-dashes are intentional
    "ASYNC109", # timeout param — API surfaces (broker contracts) vs asyncio.timeout style
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B"]           # tests allowed to be looser
"migrations/**/*.py" = ["S", "B", "F"] # alembic boilerplate
"scripts/**/*.py" = ["S"]              # dev scripts allowed subprocess/etc

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Bug-catching flags, not annotation-forcing. Skips disallow_untyped_defs et al.
# which generate noise without finding bugs. Keeps the checks that catch real
# correctness issues: None-deref via Optional-safety, unreachable code, etc.
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
extra_checks = true

# SQLAlchemy old-style Column() API cannot be fully typed without migrating
# models to Mapped[T] + mapped_column(). Until that migration lands, silence
# these modules — Column[T]/T arg-type noise is not actionable bug-signal.
[[tool.mypy.overrides]]
module = [
    "ib_trader.data.*",
    "ib_trader.engine.order",
]
ignore_errors = true

[tool.coverage.run]
source = ["ib_trader"]
omit = [
    "tests/*",
    "migrations/*",
    # Requires live IB connection — tested via smoke tests only
    "ib_trader/ib/insync_client.py",
    # Requires interactive terminal or live IB — tested via integration/smoke
    "ib_trader/repl/main.py",
    # Requires Textual TUI runtime
    "ib_trader/daemon/tui.py",
    "ib_trader/repl/tui.py",
    # Daemon main requires full async TUI + IB
    "ib_trader/daemon/main.py",
    # Engine service main requires live IB connection
    "ib_trader/engine/main.py",
    # API server main requires uvicorn runtime
    "ib_trader/api/main.py",
    # Bot runner main requires full async runtime
    "ib_trader/bots/main.py",
    # Broker implementations require live broker connections
    "ib_trader/broker/ib/client.py",
    "ib_trader/broker/alpaca/client.py",
    # Bot runner requires full async runtime
    "ib_trader/bots/runner.py",
    # Logging setup is I/O-only, tested implicitly
    "ib_trader/logging_/logger.py",
]

[tool.coverage.report]
fail_under = 90

# ----------------------------------------------------------------------------
# import-linter: enforce architectural boundaries so migration leftovers
# (e.g. SQLite repo imports on the bot hot-path) are caught automatically.
# ----------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["ib_trader"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Bot hot-path must not read SQLite for live decisions (use Redis / engine HTTP)"
type = "forbidden"
source_modules = [
    "ib_trader.bots.runtime",
    "ib_trader.bots.middleware",
    "ib_trader.bots.base",
    "ib_trader.bots.runner",
    "ib_trader.bots.strategies",
]
# CLAUDE.md permits SQLite archival writes (bot event audit history).
# BotEventRepository lives in data.repositories.bot_repository, so that
# module is allowed. What's forbidden is the live-decision reads: pending
# commands (superseded by engine HTTP API) and transaction history.
forbidden_modules = [
    "ib_trader.data.repositories.pending_command_repository",
    "ib_trader.data.repositories.transaction_repository",
    "ib_trader.data.repository",
]
ignore_imports = [
    # TODO(redis-positions): RiskMiddleware.max_positions still reads open
    # trades from SQLite. Remove these once it reads from Redis position
    # state or IB directly.
    "ib_trader.bots.base -> ib_trader.data.repository",
    "ib_trader.bots.middleware -> ib_trader.data.repository",
]

[[tool.importlinter.contracts]]
name = "insync_client may only be imported by DI entry points"
type = "forbidden"
# Source = all ib_trader subpackages EXCEPT ib_trader.ib (which owns insync_client).
source_modules = [
    "ib_trader.api",
    "ib_trader.bots",
    "ib_trader.broker",
    "ib_trader.config",
    "ib_trader.daemon",
    "ib_trader.data",
    "ib_trader.engine",
    "ib_trader.logging_",
    "ib_trader.redis",
    "ib_trader.repl",
]
forbidden_modules = ["ib_trader.ib.insync_client"]
ignore_imports = [
    "ib_trader.engine.main -> ib_trader.ib.insync_client",
    "ib_trader.repl.main -> ib_trader.ib.insync_client",
    "ib_trader.daemon.main -> ib_trader.ib.insync_client",
    "ib_trader.broker.ib.client -> ib_trader.ib.insync_client",
]

[[tool.importlinter.contracts]]
name = "output_router must have no project imports (pure TUI-decoupling protocol)"
type = "forbidden"
source_modules = ["ib_trader.repl.output_router"]
forbidden_modules = [
    "ib_trader.api",
    "ib_trader.bots",
    "ib_trader.broker",
    "ib_trader.config",
    "ib_trader.daemon",
    "ib_trader.data",
    "ib_trader.engine",
    "ib_trader.ib",
    "ib_trader.logging_",
    "ib_trader.redis",
]

[[tool.importlinter.contracts]]
name = "ib_async direct imports forbidden outside the wrapper (use ib_trader.ib.* APIs)"
type = "forbidden"
# The wrapper at ib_trader.ib.insync_client is the SOLE owner of ib_async.
# All other modules must route IB calls through wrapper APIs so the
# wrapper's defenses (verify-cancel, rate-limit, retry, etc.) are
# universally applied. This contract catches static `import ib_async`
# / `from ib_async import X` from anywhere else. Attribute-access
# leaks (e.g. ctx.ib._ib.<x>) are not import statements and need a
# separate audit.
source_modules = [
    "ib_trader.api",
    "ib_trader.bots",
    "ib_trader.broker",
    "ib_trader.config",
    "ib_trader.daemon",
    "ib_trader.data",
    "ib_trader.engine",
    "ib_trader.logging_",
    "ib_trader.redis",
    "ib_trader.repl",
]
forbidden_modules = ["ib_async"]
ignore_imports = [
    # Wrapper-internal modules legitimately import ib_async — exempt
    # these edges so transitive walks stop at the wrapper boundary
    # instead of cascading blame to every module that uses the wrapper.
    "ib_trader.ib.insync_client -> ib_async",
    "ib_trader.ib.overnight_patch -> ib_async",
    "ib_trader.ib.gateway_probe -> ib_async",
]

[[tool.importlinter.contracts]]
name = "textual must not leak into business logic (TUI confined to *.tui modules)"
type = "forbidden"
# TUI entry points (daemon.main, repl.main) legitimately reach textual via tui.py.
# This contract guards business-logic packages where textual has no place.
source_modules = [
    "ib_trader.api",
    "ib_trader.bots",
    "ib_trader.broker",
    "ib_trader.config",
    "ib_trader.daemon.reconciler",
    "ib_trader.daemon.integrity",
    "ib_trader.daemon.monitor",
    "ib_trader.data",
    "ib_trader.engine",
    "ib_trader.ib",
    "ib_trader.logging_",
    "ib_trader.redis",
    "ib_trader.repl.commands",
    "ib_trader.repl.output_router",
    "ib_trader.repl.pane_config",
]
forbidden_modules = ["textual"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "import-linter>=2.11",
    "types-pyyaml>=6.0.12.20260408",
]
